# sqids-python

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  blocklist.json  pyproject.toml  setup.py  sqids.py  tox.ini
.github/workflows/: tests.yml
assets/: filter_blocklist.py  performance.py
sqids/: __init__.py  constants.py  sqids.py
tests/: test_alphabet.py  test_blocklist.py  test_encoding.py  test_minlength.py  test_round_trip.py  test_uniques.py
