[project]
name = "sqids"
description = "Generate YouTube-like ids from numbers."
version = "0.5.1"
readme = "README.md"
authors = []
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["sqids", "encode", "generate", "ids", "hashids"]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://sqids.org/python"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sqids"]

[tool.setuptools.package-data]
sqids = ["py.typed"]

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "sqids",
    "tests",
]

[tool.coverage.paths]
source = [
    "sqids",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov/"
skip_covered = false

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]
